--- a/css/styles.css
+++ b/css/styles.css
@@ -111,8 +111,18 @@ main {
     margin: 2px;
     border-radius: 0.25rem;
     background-color: var(--foreground);
-    border: 2px solid var(--foreground);
+    border: 1px solid var(--foreground);
     color: var(--background);
+}
+
+.input-container .grid-item .hint {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: var(--bg-color-g) !important;
+    opacity: 0.5;
 }
 
 .key[value="Enter"],
