--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@
     font-family: Tahoma, Verdana, sans-serif;
 }
 html {
-    padding: 2rem;
+    padding: 2rem 0;
     background: var(--background);
 }
 h1 {
@@ -30,27 +30,18 @@ main {
     max-width: 300px;
     margin: 0 auto;
 }
-.grid-container {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(6, 1fr);
-    gap: 4px;
-    justify-items: center;
-    align-items: center;
-    width: 100%;
-    margin-bottom: 25px;
+
+#attempt-container {
+    display: flex;
+    row-gap: 3px;
+    flex-direction: column;
+    margin-bottom: 2rem;
 }
-.input-container {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 1fr;
-    gap: 4px;
-    justify-items: center;
-    align-items: center;
-    width: 100%;
-    margin: 25px auto 20px;
+#attempt-container .attempt-row {
+    display: flex;
+    column-gap: 3px;
 }
-.grid-item {
+#attempt-container .attempt-row .attempt-letter {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -59,7 +50,7 @@ main {
     border: 2px solid var(--foreground);
     border-radius: 0.5rem;
     width: 100%;
-    height: 56px;
+    aspect-ratio: 1 / 1;
 }
 
 .b,
@@ -78,18 +69,18 @@ main {
     background-color: var(--bg-color-g) !important;
 }
 
-.reveal {
+#reveal {
     border: 1px solid var(--foreground);
     color: var(--foreground) !important;
     text-align: center;
 }
-.reveal.padded {
+#reveal.padded {
     border: 2px solid var(--foreground);
     border-radius: 0.5rem;
     padding: 1rem;
 }
 
-.keyboard {
+#keyboard {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -106,10 +97,10 @@ main {
     justify-content: center;
     align-items: center;
     font-size: 1rem;
-    width: 1.5rem;
+    aspect-ratio: 1 / 1;
     height: 1.875rem;
     margin: 2px;
-    border-radius: 0.25rem;
+    border-radius: 1rem;
     background-color: var(--foreground);
     border: 1px solid var(--foreground);
     color: var(--background);
@@ -128,7 +119,7 @@ main {
 .key[value="Enter"],
 .key[value="Backspace"] {
     font-size: 1.5rem;
-    width: 2.25rem;
+    aspect-ratio: 1.5 / 1;
 }
 
 .key:disabled,
@@ -156,6 +147,26 @@ main {
     }
     100% {
         transform: translate3d(-10px, 0, 0);
+    }
+}
+
+.bounce {
+    animation: bounce 0.5s ease-in infinite;
+}
+
+.bounce:nth-child(even) {
+    animation-delay: 0.25s;
+}
+
+@keyframes bounce {
+    0% {
+        transform: translateY(0px);
+    }
+    50% {
+        transform: translateY(-10px);
+    }
+    100% {
+        transform: translateY(0px);
     }
 }
 
